--- a/scss/event css/event.scss
+++ b/scss/event css/event.scss
@@ -1,5 +1,7 @@
 //RESET
 @import "reset3";
+//IMPORT EVENT2
+@import "event2";
 
 //FONT
 @import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
@@ -114,6 +116,7 @@ header {
   background-image: url("https://images.pexels.com/photos/998641/pexels-photo-998641.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
   top: 100%;
   .container {
+    width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -218,18 +221,6 @@ header {
 
 .show {
   visibility: visible;
-  // opacity: 1;
-}
-
-.section-2 {
-  position: absolute;
-  width: 100%;
-  height: 100vh;
-  z-index: 3;
-  transition: 0.8s;
-  background-color: green;
-  top: 200%;
-  // top: 0;
 }
 
 .section-3 {
@@ -240,14 +231,4 @@ header {
   transition: 0.8s;
   background-color: skyblue;
   top: 300%;
-}
-
-.section-4 {
-  position: absolute;
-  width: 100%;
-  height: 100vh;
-  z-index: 3;
-  transition: 0.8s;
-  background-color: beige;
-  top: 400%;
 }
