--- a/scss/palace css/palace.scss
+++ b/scss/palace css/palace.scss
@@ -127,7 +127,7 @@ header {
 
   //경복궁 
   .palace-kb {
-    background-image: url('../../video/palace/bg-4.jpg');
+    background-image: url('../../video/palace-image/bg-4.jpg');
     background-position: contain;
 
     .inner {
@@ -210,7 +210,7 @@ header {
 //덕수궁 
 .palace-ds {
   height: 600px;
-  background-image: url('../../video/palace/bg2.jpg');
+  background-image: url('../../video/palace-image/bg2.jpg');
   background-position: contain;
   
  
@@ -327,7 +327,7 @@ header {
 
 // 창경궁
 .palace-cdk {
-  background-image: url('../../video/palace/bg5.jpg');
+  background-image: url('../../video/palace-image/bg5.jpg');
   background-position: contain;
   height: 700px;
 
