--- a/scss/palace css/palace.scss
+++ b/scss/palace css/palace.scss
@@ -39,24 +39,49 @@ header {
   width: 100%;
   height: 20vh;
   display: flex;
+  justify-content: space-between;
   padding: 0 7.5vw;
   align-items: center;
-  font: bold 3rem/1 "Banger";
+  ul {
+    display: flex;
+    li {
+      margin: 1vw;
+      font-size: 2rem;
+    }
+  }
   a {
+    transition: color 0.2s, background-color 0.2s ease-in;
+    opacity: 1;
+    position: relative;
+    line-height: 2rem;
+    letter-spacing: 1px;
+    font: bold 2.5rem/1 "Bangers";
+    text-shadow: -2px 0 #400bee, 0 2px #400bee, 2px 0 #400bee, 0 -2px #400bee;
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      bottom: 3px;
+      left: 0;
+      height: 3px;
+      width: 100%;
+      background-color: rgb(255, 255, 0);
+      transform-origin: right top;
+      transform: scale(0, 1);
+      transition: color 0.2s, transform 0.25s ease-out;
+    }
+    &:hover::before,
+    &:focus::before {
+      transform-origin: left top;
+      transform: scale(1, 1);
+    }
     &:hover {
       background: linear-gradient(to top, #fbf13a 10%, transparent 50%);
     }
   }
 
-  ul {
-    display: flex;
-    align-items: center;
-    position: absolute;
-    top: 70px;
-    right: 50px;
-    li {
-      margin: 0px 60px;
-    }
+  #headerLogo {
+    font-size: 5.5rem;
   }
 }
 
@@ -259,6 +284,13 @@ header {
           text-shadow: -2px 0 #400bee, 0 2px #400bee, 2px 0 #400bee, 0 -2px #400bee;
     
         }
+        p {
+          width: 250px;
+          height: 50px;
+          padding-top: 20px;
+          font-family: '양진체';
+          text-align: center;
+        }
       }
     }
     .right-slide{
@@ -336,14 +368,14 @@ header {
     height: 680px;
     margin-top: 100px;
     margin-left: 100px;
-    overflow: hidden;
+    // overflow: hidden;
 
 
     .container {
       position: relative;
       width: 1000px;
-      height: 700px;
-      margin-top: 20px;
+      height: 680px; 
+      top:20px;
       left: 200px;
       border: dashed 5px #e4e081;
       overflow: hidden;
@@ -351,7 +383,8 @@ header {
       .mySlides {
         display: none;
         padding-bottom: 6px; 
-        height: 100%px;   
+        height: 550px;  
+        overflow: hidden; 
       }
 
       .prev,
@@ -403,6 +436,7 @@ header {
         .column {
             float: left;
             width: 16.66%;
+
         }
             .demo-cursor {
               opacity: 0.4;
