--- a/scss/drive css/drive.css
+++ b/scss/drive css/drive.css
@@ -18,11 +18,9 @@ a {
 
 @font-face {
   font-family: "bitbit";
-  src: url("//cdn.df.nexon.com/img/common/font/DNFBitBit-Regular.woff"),
-    url("//cdn.df.nexon.com/img/common/font/DNFBitBit-Regular.woff2");
+  src: url("//cdn.df.nexon.com/img/common/font/DNFBitBit-Regular.woff"), url("//cdn.df.nexon.com/img/common/font/DNFBitBit-Regular.woff2");
   font-family: "Cafe24Ssurround";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff")
-    format("woff");
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -96,7 +94,7 @@ figure video {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
 
 @keyframes slideLeftOutRightIn {
@@ -355,4 +353,4 @@ figure video {
 .seoul .container6 {
   top: 61%;
   left: 58%;
-} /*# sourceMappingURL=drive.css.map */
+}/*# sourceMappingURL=drive.css.map */
