--- a/scss/event css/_event2.scss
+++ b/scss/event css/_event2.scss
@@ -170,12 +170,13 @@
       text-align: center;
       transition: 1s;
       opacity: 0;
-      background-color: #f7f795;
+      background-color: #181818;
       color: transparent;
       font: bold 5rem/1.5 "Bangers";
-      -webkit-text-stroke: 2px black;
-      letter-spacing: 10px;
+      -webkit-text-stroke: 1px yellow;
+      letter-spacing: 15px;
       .contents {
+        letter-spacing: 2px;
         position: relative;
         height: 100%;
         width: 100%;
@@ -185,9 +186,56 @@
         grid-template-columns: 1fr 1fr 1fr 1fr;
 
         .card {
-          border: 1px solid black;
+          width: 1fr;
           height: 100%;
-          width: 100%;
+          border: 1px solid black;
+          background-color: #c6bebe;
+          padding: 2rem;
+          border-radius: 6px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          .cardWrapper {
+            background-color: white;
+            border-radius: 10px;
+            width: 95%;
+            height: 60%;
+            .card-image {
+              width: 100%;
+              height: 30%;
+
+              img {
+                width: 100%;
+                border-radius: 10px;
+              }
+              &:hover {
+                transform: scale(0.99);
+              }
+            }
+            .category {
+              text-transform: uppercase;
+              font-size: 0.5em;
+              font-weight: 500;
+              color: #3f79e6;
+              padding: 5px 3px 0;
+
+              &:hover {
+                cursor: pointer;
+              }
+            }
+
+            .heading {
+              font-size: 1rem;
+              color: #585757;
+              padding: 7px;
+              .author {
+                color: gray;
+                font-weight: 400;
+                font-size: 8px;
+                padding-top: 1rem;
+              }
+            }
+          }
         }
       }
     }
