--- a/scss/event css/event.css
+++ b/scss/event css/event.css
@@ -139,13 +139,14 @@ a {
   text-align: center;
   transition: 1s;
   opacity: 0;
-  background-color: #f7f795;
+  background-color: #181818;
   color: transparent;
   font: bold 5rem/1.5 "Bangers";
-  -webkit-text-stroke: 2px black;
-  letter-spacing: 10px;
+  -webkit-text-stroke: 1px yellow;
+  letter-spacing: 15px;
 }
 .section-2 .inner .contentsWrapper .contents {
+  letter-spacing: 2px;
   position: relative;
   height: 100%;
   width: 100%;
@@ -155,9 +156,53 @@ a {
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 .section-2 .inner .contentsWrapper .contents .card {
-  border: 1px solid black;
+  width: 1fr;
   height: 100%;
+  border: 1px solid black;
+  background-color: #c6bebe;
+  padding: 2rem;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.section-2 .inner .contentsWrapper .contents .card .cardWrapper {
+  background-color: white;
+  border-radius: 10px;
+  width: 95%;
+  height: 60%;
+}
+.section-2 .inner .contentsWrapper .contents .card .cardWrapper .card-image {
   width: 100%;
+  height: 30%;
+}
+.section-2 .inner .contentsWrapper .contents .card .cardWrapper .card-image img {
+  width: 100%;
+  border-radius: 10px;
+}
+.section-2 .inner .contentsWrapper .contents .card .cardWrapper .card-image:hover {
+  transform: scale(0.99);
+}
+.section-2 .inner .contentsWrapper .contents .card .cardWrapper .category {
+  text-transform: uppercase;
+  font-size: 0.5em;
+  font-weight: 500;
+  color: #3f79e6;
+  padding: 5px 3px 0;
+}
+.section-2 .inner .contentsWrapper .contents .card .cardWrapper .category:hover {
+  cursor: pointer;
+}
+.section-2 .inner .contentsWrapper .contents .card .cardWrapper .heading {
+  font-size: 1rem;
+  color: #585757;
+  padding: 7px;
+}
+.section-2 .inner .contentsWrapper .contents .card .cardWrapper .heading .author {
+  color: gray;
+  font-weight: 400;
+  font-size: 8px;
+  padding-top: 1rem;
 }
 
 body {
