feat. event페이지 완성

--- a/scss/event css/_event2.scss
+++ b/scss/event css/_event2.scss
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
 // "Bangers"
 
+@import url("https://fonts.googleapis.com/css2?family=Gajraj+One&family=Tilt+Prism&family=Tourney:wght@200&display=swap");
+// font-family: 'Gajraj One', cursive;
+// font-family: 'Tilt Prism', cursive;
+// font-family: 'Tourney', cursive;
+
 .section-2 {
   position: absolute;
   width: 100%;
@@ -178,34 +183,35 @@
       .contents {
         letter-spacing: 2px;
         position: relative;
-        height: 100%;
+        height: 75vh;
         width: 100%;
         display: grid;
         justify-content: space-around;
         align-items: center;
         grid-template-columns: 1fr 1fr 1fr 1fr;
-
+        -webkit-text-stroke-color: black;
         .card {
           width: 1fr;
-          height: 100%;
-          border: 1px solid black;
-          background-color: #c6bebe;
+          height: 75vh;
+          background: linear-gradient(to bottom, #fbf13a 10%, transparent 80%);
           padding: 2rem;
-          border-radius: 6px;
           display: flex;
-          justify-content: center;
           align-items: center;
+          justify-content: center;
           .cardWrapper {
             background-color: white;
             border-radius: 10px;
-            width: 95%;
-            height: 60%;
+            width: 100%;
+            height: 85%;
+            box-shadow: 0 5px 8px 0 black;
             .card-image {
               width: 100%;
-              height: 30%;
-
+              height: 40%;
+              margin-top: 1.5rem;
+              padding: 1rem;
               img {
                 width: 100%;
+                height: 100%;
                 border-radius: 10px;
               }
               &:hover {
@@ -214,10 +220,10 @@
             }
             .category {
               text-transform: uppercase;
-              font-size: 0.5em;
+              font-size: 0.7em;
+              font-family: "Tourney";
               font-weight: 500;
-              color: #3f79e6;
-              padding: 5px 3px 0;
+              padding-top: 1.5rem;
 
               &:hover {
                 cursor: pointer;
@@ -228,12 +234,6 @@
               font-size: 1rem;
               color: #585757;
               padding: 7px;
-              .author {
-                color: gray;
-                font-weight: 400;
-                font-size: 8px;
-                padding-top: 1rem;
-              }
             }
           }
         }
