--- a/scss/drive css/drive.css
+++ b/scss/drive css/drive.css
@@ -249,7 +249,7 @@ figure video {
 .st0 {
   fill: none;
   stroke: #fbf13a;
-  stroke-width: 3;
+  stroke-width: 5;
   stroke-linecap: round;
   stroke-linejoin: round;
   stroke-miterlimit: 10;
@@ -265,9 +265,9 @@ figure video {
 .seoul .map {
   position: absolute;
   width: 75vw;
-  top: 5%;
+  top: 15%;
   left: 50%;
-  transform: translate(-600px, -300px);
+  transform: translate(-600px, -200px);
 }
 .seoul .container {
   position: absolute;
@@ -281,10 +281,11 @@ figure video {
   background-image: linear-gradient(#9b59b6, #84cdfa, #5ad1cd);
 }
 .seoul .container:active {
-  width: 200px;
-  height: 200px;
+  width: 350px;
+  height: 350px;
+  transform: translate(-125px, -125px);
   z-index: 5;
-  animation: rotate_stop 1s;
+  animation: rotate_stop;
 }
 .seoul .container span {
   position: absolute;
@@ -334,30 +335,55 @@ figure video {
   }
 }
 .seoul .container1 {
-  top: 65%;
-  left: 53%;
+  top: 76%;
+  left: 50%;
 }
 .seoul .container1::after {
   content: "";
   background-image: url(/video/banpojpg.jpg);
 }
 .seoul .container2 {
-  top: 37%;
+  top: 65%;
   left: 49%;
+}
+.seoul .container2::after {
+  content: "";
+  background-image: url(/video/namsan.png);
+  background-size: cover;
 }
 .seoul .container3 {
   top: 53%;
-  left: 50%;
+  left: 48%;
+}
+.seoul .container3::after {
+  content: "";
+  background-image: url(/video/buk.jpg);
+  background-size: cover;
 }
 .seoul .container4 {
-  top: 51%;
-  left: 54%;
+  top: 70%;
+  left: 57%;
+}
+.seoul .container4::after {
+  content: "";
+  background-image: url(/video/drive4.png);
+  background-size: cover;
 }
 .seoul .container5 {
-  top: 50%;
-  left: 35%;
+  top: 70%;
+  left: 40%;
+}
+.seoul .container5::after {
+  content: "";
+  background-image: url(/video/drive5.png);
+  background-size: cover;
 }
 .seoul .container6 {
-  top: 61%;
-  left: 58%;
+  top: 71%;
+  left: 53%;
+}
+.seoul .container6::after {
+  content: "";
+  background-image: url(/video/drive6.png);
+  background-size: cover;
 }/*# sourceMappingURL=drive.css.map */
