--- a/scss/drive css/drive.css
+++ b/scss/drive css/drive.css
@@ -341,6 +341,7 @@ figure video {
 .seoul .container1::after {
   content: "";
   background-image: url(/video/banpojpg.jpg);
+  background-position: center;
 }
 .seoul .container2 {
   top: 65%;
@@ -349,6 +350,7 @@ figure video {
 .seoul .container2::after {
   content: "";
   background-image: url(/video/namsan.png);
+  background-position: center;
   background-size: cover;
 }
 .seoul .container3 {
@@ -358,6 +360,7 @@ figure video {
 .seoul .container3::after {
   content: "";
   background-image: url(/video/buk.jpg);
+  background-position: center;
   background-size: cover;
 }
 .seoul .container4 {
@@ -367,6 +370,7 @@ figure video {
 .seoul .container4::after {
   content: "";
   background-image: url(/video/drive4.png);
+  background-position: center;
   background-size: cover;
 }
 .seoul .container5 {
@@ -376,6 +380,7 @@ figure video {
 .seoul .container5::after {
   content: "";
   background-image: url(/video/drive5.png);
+  background-position: center;
   background-size: cover;
 }
 .seoul .container6 {
@@ -385,5 +390,6 @@ figure video {
 .seoul .container6::after {
   content: "";
   background-image: url(/video/drive6.png);
+  background-position: center;
   background-size: cover;
 }/*# sourceMappingURL=drive.css.map */
